--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   scroll-behavior: smooth;
   font-family: 'Poppins', sans-serif;
 }
+
+@media screen and (max-width: 480px) {
+  #logoDiv{
+    margin-top: 120px;
+  }
+}
 </style>
 <body>
     <!-- Navbar Start -->
@@ -41,7 +47,7 @@
     <!-- Home Section Start -->
     <section id="home" class="text-gray-700 body-font ">
     <div class="container  px-5 py-24 mx-auto">
-        <div class="flex justify-center text-center mt-10  mb-10">
+        <div id="logoDiv" class="flex justify-center text-center mt-10  mb-10">
         <img src="assets/images/onlinelogomaker-072519-1924-0131.svg" width="200"/>
         <!-- <h2 class="text-xs text-blue-500 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
         <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">Master Cleanse Reliac Heirloom</h1> -->
@@ -67,7 +73,7 @@
             </div>
             </div>
         </div>
-        <div class="p-4 md:w-1/3">
+        <div  class="p-4 md:w-1/3">
             <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
             <div class="flex items-center mb-3">
                 <div class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-blue-500 text-white flex-shrink-0">
@@ -235,11 +241,12 @@
           <div class="flex flex-wrap -m-2">
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://media-exp1.licdn.com/dms/image/C5103AQF6DKk1lU6gNQ/profile-displayphoto-shrink_200_200/0?e=1602115200&v=beta&t=LIezWh-CoiXo-MdvzkcXqE2OoQQK74Nx5aZbxgiSIaA  ">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/nidhey.jpeg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Nidhey Indurkar</h2>
                   <p class="text-gray-500">Full Stack Developer</p>
                   <p class="text-gray-500">2+ Years of Experience</p>
+                  <a href="nidhey.html">Know More</a>
                 </div>
               </div>
             </div>
@@ -250,6 +257,28 @@
                   <h2 class="text-gray-900 title-font font-medium">Ritwik Chavhan</h2>
                   <p class="text-gray-500">Full Stack Developer</p>
                   <p class="text-gray-500">1+ Years of Experience</p>
+                  <a href="#">Know More</a>
+                </div>
+              </div>
+            </div>
+            
+            <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+              <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/90x90">
+                <div class="flex-grow">
+                  <h2 class="text-gray-900 title-font font-medium">Shubhangi Hasoriya</h2>
+                  <p class="text-gray-500">Php Devloper</p>
+                  <a href="#">Know More</a>
+                </div>
+              </div>
+            </div>
+            <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+              <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/kadir.jpg">
+                <div class="flex-grow">
+                  <h2 class="text-gray-900 title-font font-medium">Kadir Sheikh</h2>
+                  <p class="text-gray-500">Java Devloper</p>
+                  <a href="#">Know More</a>
                 </div>
               </div>
             </div>
@@ -259,24 +288,7 @@
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Sarthak Kore</h2>
                   <p class="text-gray-500">Android / Flutter Developer</p>
-                </div>
-              </div>
-            </div>
-            <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-              <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/90x90">
-                <div class="flex-grow">
-                  <h2 class="text-gray-900 title-font font-medium">Shubhangi Hasoriya</h2>
-                  <p class="text-gray-500">Php Devloper</p>
-                </div>
-              </div>
-            </div>
-            <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-              <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/90x90">
-                <div class="flex-grow">
-                  <h2 class="text-gray-900 title-font font-medium">Kadir Sheikh</h2>
-                  <p class="text-gray-500">Java Devloper</p>
+                  <a href="#">Know More</a>
                 </div>
               </div>
             </div>
@@ -363,8 +375,7 @@
         </div>
         <div class="bg-gray-200">
           <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-            <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 tailblocks —
-              <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@knyttneve</a>
+            <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 Swirlly —
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
               <a class="text-gray-500">
