Added Ritwik's Info

--- a/ritwik.html
+++ b/ritwik.html
@@ -53,16 +53,17 @@ img{
 
 <section class="text-gray-700 py-8 body-font">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-    <div id="profilePic" class="justify-center text-center lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-      <img class="object-cover  object-center rounded" alt="hero" src="assets/images/nidhey.jpeg">
+    <div id="profilePic" class="text-center lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+      <img class="object-cover  object-center rounded" width="200px" alt="hero" src="assets/images/ritwik.jpeg">
     </div>
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Nidhey Indurkar
-        
+      <h1 class="title-font  sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Ritwik Chavhan
       </h1>
-      <h2 class=" sm:text-2xl text-2xl font-medium">Chief Executive Officer (CEO)</h2>
+      <h2 class=" sm:text-2xl text-2xl font-medium">Chief Technology Officer (CTO)</h2>
       
-      <p class="mb-8 leading-relaxed">Nidhey Indurkar had founded the swirlly along with his team. As a great programmer, he has a wise experience of two and more years. Since he started the programming along with his engineering studies, he still had achieved a goal where he can build an application and website with his outstanding programming skills. <br>He has polished his programming skill with the programming language JavaScript, PHP, etc. He had worked for various projects like dailytroop, oily handshake, etc<br>He strongly believes in the statement:" We are what our thoughts have made us; so take care about what you think; Words are secondary. Thoughts live, they travel far. "</p>
+
+      <p class="mb-8 leading-relaxed">Ritwik Chavhan is the partner and co-founder of Swirlly. He has great experience of one and more years. He is a great coder who had learned these skills by Pursuing his engineering studies. Now he had reached a point where he is very much expertise in creating an application and website. <br>He had learned and Mastered the skills of coding in PHP. He had contributed his programming skills on projects like dailytroop, oily handshake, etc. 
+        He works on the statement: " Say yes to grow. "</p>
       <div class="flex justify-center">
         <a href="index.html"><button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Back</button></a>
       </div>
