--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
                   <h2 class="text-gray-900 title-font font-medium">Ritwik Chavhan</h2>
                   <p class="text-gray-500">Full Stack Developer</p>
                   <p class="text-gray-500">1+ Years of Experience</p>
-                  <a href="#">Know More</a>
+                  <a href="ritwik.html">Know More</a>
                 </div>
               </div>
             </div>
             
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/90x90">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/shubhangi.jpeg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Shubhangi Hasoriya</h2>
                   <p class="text-gray-500">Php Devloper</p>
