--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/nidhey.jpeg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Nidhey Indurkar</h2>
-                  <p class="text-gray-500">Full Stack Developer</p>
+                  <p class="text-gray-500">CEO</p>
                   <p class="text-gray-500">2+ Years of Experience</p>
                   <a href="nidhey.html">Know More</a>
                 </div>
@@ -255,7 +255,7 @@
                 <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/ritwik.jpeg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Ritwik Chavhan</h2>
-                  <p class="text-gray-500">Full Stack Developer</p>
+                  <p class="text-gray-500">CTO</p>
                   <p class="text-gray-500">1+ Years of Experience</p>
                   <a href="ritwik.html">Know More</a>
                 </div>
@@ -267,7 +267,7 @@
                 <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/shubhangi.jpeg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Shubhangi Hasoriya</h2>
-                  <p class="text-gray-500">Php Devloper</p>
+                  <p class="text-gray-500">Product Designer</p>
                   <a href="#">Know More</a>
                 </div>
               </div>
@@ -277,7 +277,17 @@
                 <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/kadir.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Kadir Sheikh</h2>
-                  <p class="text-gray-500">Java Devloper</p>
+                  <p class="text-gray-500">COO</p>
+                  <a href="#">Know More</a>
+                </div>
+              </div>
+            </div>
+            <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
+              <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="assets/images/mayuri.jpeg">
+                <div class="flex-grow">
+                  <h2 class="text-gray-900 title-font font-medium">Mayuri Wandhe</h2>
+                  <p class="text-gray-500">Project Manager</p>
                   <a href="#">Know More</a>
                 </div>
               </div>
