Added All team members info

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Kadir Sheikh</h2>
                   <p class="text-gray-500">COO</p>
-                  <a href="#">Know More</a>
+                  <a href="kadir.html">Know More</a>
                 </div>
               </div>
             </div>
@@ -277,7 +277,7 @@
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Shubhangi Hasoriya</h2>
                   <p class="text-gray-500">Product Designer</p>
-                  <a href="#">Know More</a>
+                  <a href="shubhangi.html">Know More</a>
                 </div>
               </div>
             </div>
@@ -288,7 +288,7 @@
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Mayuri Wandhe</h2>
                   <p class="text-gray-500">Project Manager</p>
-                  <a href="#">Know More</a>
+                  <a href="mayuri.html">Know More</a>
                 </div>
               </div>
             </div>
