--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
         <div class="flex flex-col text-center w-full mb-20">
         <h2 class="text-xs text-blue-500 tracking-widest font-medium title-font mb-1">WHAT WE DO?</h2>
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">About Us </h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Swirlly is the service-based company. Swirlly established in the year 2020. The company had initiated the project work from Nagpur, Maharashtra, India.  The computer science-engineering student had started this organization to help digitalizing the society. <br> Swirlly will simplify the problems you businessperson are facing due to digital market and provide you the best digital solution for updating your business which will then ready to compete with this generation digital market. In simple words, we are going to build a software application or a website, which will run your business on digital platform.</p>
         </div>
         <div class="flex flex-wrap">
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Stars</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Get</h2>
+            <p class="leading-relaxed text-base mb-4">We will get /take some informative data from you (our customers) to build a software product (application, website).</p>
             <a class="text-blue-500 inline-flex items-center">Learn More
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -141,8 +141,8 @@
             </a>
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">The Catalyzer</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Build</h2>
+            <p class="leading-relaxed text-base mb-4">We will get /take some informative data from you (our customers) to build a software product (application, website). The information will be like:</p>
             <a class="text-blue-500 inline-flex items-center">Learn More
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -150,15 +150,15 @@
             </a>
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Provide</h2>
+            <p class="leading-relaxed text-base mb-4">We will get /take some informative data from you (our customers) to build a software product (application, website). The information will be like:</p>
             <a class="text-blue-500 inline-flex items-center">Learn More
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
             </a>
         </div>
-        <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
+<!--         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
             <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
             <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
             <a class="text-blue-500 inline-flex items-center">Learn More
@@ -166,7 +166,7 @@
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
             </a>
-        </div>
+        </div> -->
         </div>
         <button class="flex mx-auto mt-16 text-white bg-blue-500 border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded text-lg">Button</button>
     </div>
