--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
             <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Build</h2>
-            <p class="leading-relaxed text-base mb-4">We will get /take some informative data from you (our customers) to build a software product (application, website). The information will be like:</p>
+            <p class="leading-relaxed text-base mb-4">We are then going build/create the software product as per your requirement. Our IT development team works with you from Ideation, research, strategy, design, development, and launch to create world-class responsive and innovative sites, that are beautiful and pleasing, and increase conversions, sales, and brand loyalty.</p>
             <a class="text-blue-500 inline-flex items-center">Learn More
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -151,7 +151,7 @@
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
             <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Provide</h2>
-            <p class="leading-relaxed text-base mb-4">We will get /take some informative data from you (our customers) to build a software product (application, website). The information will be like:</p>
+            <p class="leading-relaxed text-base mb-4">After completion of building high quality software, we will provide/deliver your product on the decided date of delivery. Then we will provide the require service for your product as per the terms and condition policy.</p>
             <a class="text-blue-500 inline-flex items-center">Learn More
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
